corpus/branch.txt
===
Simple branch 1
===

if ( $true ) { }

---

(program
  (if_statement
    (pipeline_statement
      (variable
        (simple_variable)))))

===
Simple branch 2
===

if ( $true )
{
}

---

(program
  (if_statement
    (pipeline_statement
      (variable
        (simple_variable)))))

===
Simple branch 3
===

if($true){
}

---

(program
  (if_statement
    (pipeline_statement
      (variable
        (simple_variable)))))

===
Simple branch 4
===

if ( $true ) { } else { }

---

(program
  (if_statement
   (pipeline_statement
     (variable
       (simple_variable)))
  (else_statement))
)

===
Simple branch 5
===

if ( $true ) {
}
elseif ( $true ) {
}
else {
}

---

(program
  (if_statement
    (pipeline_statement
      (variable
        (simple_variable)))
    (elseif_statement
      (pipeline_statement
        (variable
          (simple_variable))))
    (else_statement))
)

